30_sort_lines/grade.txt
Grading at Thu May 14 14:11:15 UTC 2020
Attempting to compile sortLines.c
sortLines.c: In function ‘main’:
sortLines.c:68:12: error: ‘outpu’ undeclared (first use in this function)
       free(outpu[j]);
            ^
sortLines.c:68:12: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
